# dynamo-mcp

./: .gitignore  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  SERVER_INFO.md  test_server.sh
src/: github.rs  main.rs  repo_manager.rs
