[package]
name = "dynamo_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# JSON and serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
walkdir = "2"
dirs = "5"

# JSON-RPC for MCP protocol
jsonrpc-core = "18"
jsonrpc-stdio-server = "18"

# Command execution
which = "6"

# HTTP client for GitHub API
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Caching and state management
once_cell = "1"

# Time handling
chrono = "0.4"
